chore: fix css spacing

--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -1,10 +1,6 @@
 .container {
   display: flex;
-  /* gap: var(--spacing-md); */
   flex-direction: column;
-  /* padding: var(--spacing-lg); */
-  /* max-width: var(--breakpoint-lg); */
-  /* margin: 0 auto; */
   width: 100%;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -42,13 +38,14 @@
   width: 100%;
   max-width: var(--breakpoint-lg);
   margin: 0 auto;
+  padding: var(--spacing-lg);
 
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: var(--spacing-lg);
 }
 
 .footerLinkGroup {
-  padding: var(--spacing-lg) var(--spacing-md);
   display: flex;
   flex-direction: column;
   gap: var(--spacing-sm);
@@ -190,9 +187,10 @@
   }
 
   .footerLinksContainer {
-    padding: var(--spacing-lg) 0;
+    padding: var(--spacing-sm) 0;
     display: flex;
     align-items: stretch;
+    gap: var(--spacing-sm);
   }
 
   .footerLinkGroup {
