--- a/src/app/components/Hero/Hero.module.css
+++ b/src/app/components/Hero/Hero.module.css
@@ -12,14 +12,13 @@
 .heroImageContainer {
   display: flex;
   justify-content: center;
-  /* padding: var(--padding-large); */
+  align-items: flex-start;
 }
 
 .heroImage {
   width: 100%;
+  max-width: 469px;
   height: auto;
-  object-fit: cover;
-  max-width: 450px;
 }
 
 .content {
@@ -121,13 +120,6 @@
 
     text-wrap: balanced;
     gap: 24px;
-  }
-
-  .heroImage {
-    width: 469px;
-    height: auto;
-    padding: 0;
-    max-width: unset;
   }
 
   .content h1 {
